# ruuvi.gateway_esp.c

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  build_release.sh  clang_format_all.sh  compile_and_flash_bin.sh  how-to-contribute.md  partitions.csv  requirements.txt  ruuvi_gw_flash.py  sdkconfig  sdkconfig.defaults  sdkconfig_with_heap_tracing  sonar-project.properties  sonar_scanner-ruuvi.gateway_esp.sh
components/binaries/: CMakeLists.txt
components/esp_common/: CMakeLists.txt
components/esp_eth/: CMakeLists.txt
components/esp_http_client/: CMakeLists.txt  esp_http_client.c
components/fatfs/: CMakeLists.txt
components/fatfs_cfg/: CMakeLists.txt
components/fatfs_gwui/: CMakeLists.txt
components/fatfs_nrf52/: CMakeLists.txt
components/gw_cfg_def/: CMakeLists.txt
components/protocomm/: CMakeLists.txt
components/soc/: CMakeLists.txt
components/wpa_supplicant/: CMakeLists.txt
gw_cfg_default/: CMakeLists.txt  README.md  gw_cfg_def_partition.csv  gw_cfg_default.json  gw_cfg_default_gen.c  gw_cfg_default_gen.json  run_and_capture.cmake
main/: CMakeLists.txt  adv_decode.c  adv_decode.h  adv_decode_0x05.c  adv_decode_0x06.c  adv_decode_0x07.c  adv_decode_0xe0.c  adv_decode_0xe1.c  adv_decode_0xf0.c  adv_mqtt.c  adv_mqtt.h  adv_mqtt_cfg_cache.c  adv_mqtt_cfg_cache.h  adv_mqtt_events.c  adv_mqtt_events.h  adv_mqtt_internal.h  adv_mqtt_signals.c  adv_mqtt_signals.h  adv_mqtt_task.c  adv_mqtt_task.h  adv_mqtt_timers.c  adv_mqtt_timers.h  adv_post.c  adv_post.h  adv_post_async_comm.c  adv_post_async_comm.h  adv_post_cfg_cache.c  adv_post_cfg_cache.h  adv_post_events.c  adv_post_events.h  adv_post_green_led.c  adv_post_green_led.h  adv_post_internal.h  adv_post_nrf52.c  adv_post_nrf52.h  adv_post_signals.c  adv_post_signals.h  adv_post_statistics.c  adv_post_statistics.h  adv_post_task.c  (+202 more)
main/includes/: adv_post.h  ethernet.h  gpio.h  http.h  leds.h  mqtt.h  ruuvi_gateway.h  ruuvidongle.h  time_task.h  uart.h
mkfatfs/: CMakeLists.txt
tests/: AGENTS.md  CMakeLists.txt
tests/esp_simul/: CMakeLists.txt  sdkconfig.h
tests/include/: esp_attr.h  esp_bit_defs.h  esp_eth.h  esp_eth_com.h  esp_eth_mac.h  esp_eth_netif_glue.h  esp_eth_phy.h  esp_event.h  esp_event_legacy.h  esp_flash_partitions.h  esp_log.h  esp_netif_ppp.h  esp_netif_private.h  esp_netif_slip.h  esp_netif_types.h  esp_transport_ssl.h  esp_wifi_types.h  lwip_default_hooks.h  ruuvi_board_gwesp.h  sdkconfig.h
tests/leds/: CMakeLists.txt  TQueue.h  test1.cpp  test_leds.cpp
tests/leds/driver/: ledc.h
tests/test_adv_mqtt_cfg_cache/: CMakeLists.txt  test_adv_mqtt_cfg_cache.cpp
tests/test_adv_mqtt_events/: CMakeLists.txt  test_adv_mqtt_events.cpp
tests/test_adv_mqtt_signals/: CMakeLists.txt  test_adv_mqtt_signals.cpp
tests/test_adv_mqtt_task/: CMakeLists.txt  test_adv_mqtt_task.cpp
tests/test_adv_mqtt_timers/: CMakeLists.txt  test_adv_mqtt_timers.cpp
tests/test_adv_post_async_comm/: CMakeLists.txt  test_adv_post_async_comm.cpp
tests/test_adv_post_cfg_cache/: CMakeLists.txt  test_adv_post_cfg_cache.cpp
tests/test_adv_post_events/: CMakeLists.txt  test_adv_post_events.cpp
tests/test_adv_post_green_led/: CMakeLists.txt  test_adv_post_green_led.cpp
tests/test_adv_post_signals/: CMakeLists.txt  test_adv_post_signals.cpp
tests/test_adv_post_statistics/: CMakeLists.txt  test_adv_post_statistics.cpp
tests/test_adv_post_task/: CMakeLists.txt  test_adv_post_task.cpp
tests/test_adv_post_timers/: CMakeLists.txt  test_adv_post_timers.cpp
tests/test_adv_table/: CMakeLists.txt  test_adv_table.cpp
tests/test_app_malloc/: CMakeLists.txt  test_app_malloc.cpp
tests/test_app_wrappers/: CMakeLists.txt  test_app_strtol.cpp  test_app_strtoul.cpp
tests/test_bin2hex/: CMakeLists.txt  test_bin2hex.cpp
tests/test_cjson_wrap/: CMakeLists.txt  test_cjson_wrap.cpp
tests/test_esp_http_client/: CMakeLists.txt  http_event.hpp  tcp_transport_stub.c  tcp_transport_stub.h  test_esp_http_client.cpp  test_http_header.cpp
tests/test_event_mgr/: CMakeLists.txt  test_event_mgr.cpp  test_events.hpp
tests/test_flashfatfs/: CMakeLists.txt  test_flashfatfs.cpp
tests/test_gw_cfg/: CMakeLists.txt  test_gw_cfg.cpp
tests/test_gw_cfg_blob/: CMakeLists.txt  test_gw_cfg_blob.cpp
tests/test_gw_cfg_default/: CMakeLists.txt  test_gw_cfg_default.cpp
tests/test_gw_cfg_json/: CMakeLists.txt  test_gw_cfg_json.cpp
tests/test_gw_cfg_ruuvi_json_generate/: CMakeLists.txt  test_gw_cfg_ruuvi_json_generate.cpp
tests/test_gw_cfg_storage/: CMakeLists.txt  test_gw_cfg_storage.cpp
tests/test_hmac_sha256/: CMakeLists.txt  test_hmac_sha256.cpp
tests/test_http_check_post_advs/: CMakeLists.txt  test_http_check_post_advs.cpp
tests/test_http_check_post_stat/: CMakeLists.txt  test_http_check_post_stat.cpp
tests/test_http_json/: CMakeLists.txt  sdkconfig.h  test_http_json.cpp
tests/test_http_post_event_handler/: CMakeLists.txt  test_http_post_event_handler.cpp
tests/test_http_server_cb/: CMakeLists.txt  test_http_server_cb.cpp
tests/test_http_stream_reader_nvs/: CMakeLists.txt  test_http_stream_reader_nvs.cpp
tests/test_json_helper/: CMakeLists.txt  test_json_helper.cpp
tests/test_json_ruuvi/: CMakeLists.txt  esp_log_wrapper.cpp  test_json_ruuvi.cpp
tests/test_leds/: CMakeLists.txt  TQueue.h  test_events.h  test_leds.cpp
tests/test_leds_blinking/: CMakeLists.txt  test_leds_blinking.cpp
tests/test_leds_ctrl/: CMakeLists.txt  test_leds_ctrl.cpp
tests/test_leds_ctrl2/: CMakeLists.txt  test_leds_ctrl2.cpp
tests/test_mac_addr/: CMakeLists.txt  test_mac_addr.cpp
tests/test_metrics/: CMakeLists.txt  sdkconfig.h  test_metrics.cpp
tests/test_mqtt_json/: CMakeLists.txt  sdkconfig.h  test_mqtt_json.cpp
tests/test_nrf52fw/: CMakeLists.txt  crc.cpp  test_nrf52fw.cpp
tests/test_nrf52swd/: CMakeLists.txt  test_nrf52swd.cpp
tests/test_os_task/: CMakeLists.txt  test_os_task.cpp
tests/test_ruuvi_auth/: CMakeLists.txt  test_ruuvi_auth.cpp
tests/test_ruuvi_nvs/: CMakeLists.txt  test_ruuvi_nvs.cpp
tests/test_time_str/: CMakeLists.txt  test_time_str.cpp
(+319 files in other folders)
