idf_component_register(
        SRCS
            adv_post.c
            adv_table.c
            adv_table.h
            adv_post.h
            bin2hex.c
            bin2hex.h
            cjson_wrap.c
            cjson_wrap.h
            esp_ota_ops_patched.c
            esp_ota_ops_patched.h
            ethernet.c
            ethernet.h
            event_mgr.c
            event_mgr.h
            flashfatfs.c
            flashfatfs.h
            fw_update.c
            fw_update.h
            gpio.c
            gpio.h
            gpio_switch_ctrl.c
            gpio_switch_ctrl.h
            gw_cfg.c
            gw_cfg.h
            gw_cfg_blob.c
            gw_cfg_blob.h
            gw_cfg_json.c
            gw_cfg_json.h
            gw_cfg_ruuvi_json.c
            gw_cfg_ruuvi_json.h
            gw_cfg_default.c
            gw_cfg_default.h
            hmac_sha256.c
            hmac_sha256.h
            http.c
            http.h
            http_json.c
            http_json.h
            json_helper.c
            json_helper.h
            json_ruuvi.c
            json_ruuvi.h
            http_server_cb.c
            http_server_cb.h
            leds.c
            leds.h
            main_loop.c
            metrics.c
            metrics.h
            mqtt.c
            mqtt.h
            mqtt_json.c
            mqtt_json.h
            nrf52fw.c
            nrf52fw.h
            nrf52swd.c
            nrf52swd.h
            reset_task.c
            reset_task.h
            ruuvi_auth.c
            ruuvi_auth.h
            ruuvi_device_id.c
            ruuvi_device_id.h
            ruuvi_gateway_main.c
            ruuvi_gateway.h
            settings.c
            time_str.c
            time_str.h
            time_task.c
            time_task.h
        REQUIRES
            app_update
            mqtt
            lwip
            esp_http_client
            json
            fatfs
            esp32-wifi-manager
            ruuvi.boards.c
            ruuvi.comm_tester.c
            ruuvi.endpoints.c
            libSWD-esp32
            ruuvi.esp_wrappers.c
)

target_compile_options(${COMPONENT_LIB} PRIVATE
        -Wstack-usage=512
        -fstack-usage
)